Fix "Found argument '--check' which wasn't expected"

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,4 +16,4 @@ jobs:
       - name: clippy
         run: cargo clippy --verbose
       - name: fmt
-        run: cargo fmt --verbose --check
+        run: cargo fmt --verbose -- --check
